# dmgui

./: .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
backends/: dmgui_input_sdl2.cpp  dmgui_input_sdl2.h  dmgui_render_gl3.cpp  dmgui_render_gl3.h
backends/opengl/: dmgui_opengl_loader.h  glcorearb.h  glext.h
demo/demo_sdl2_gl3/: CMakeLists.txt  CMakeUserPresets.json  main.c
include/dmgui/: dmgui.h  dmgui_config.h  dmgui_font.h
source/: dmgui.cpp  dmgui_font.cpp
